crates/gfm-syntax/tests/snapshots/fenced_code_blocks/example_102.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "  " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  FencedCodeBlock [ offsets: 2, position: ( line: 0, col: 2 ) ] ]
    Backtick: "`" [ offsets: 2, position: ( line: 0, col: 2 ) ] ]
    Backtick: "`" [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Backtick: "`" [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    LineEnding: "\n" [ offsets: 5, position: ( line: 0, col: 5 ) ] ]
    Word: "aaa" [ offsets: 6, position: ( line: 1, col: 0 ) ] ]
    LineEnding: "\n  " [ offsets: 9, position: ( line: 1, col: 3 ) ] ]
    Word: "aaa" [ offsets: 12, position: ( line: 2, col: 0 ) ] ]
    LineEnding: "\n" [ offsets: 15, position: ( line: 2, col: 3 ) ] ]
    Word: "aaa" [ offsets: 16, position: ( line: 3, col: 0 ) ] ]
    LineEnding: "\n  " [ offsets: 19, position: ( line: 3, col: 3 ) ] ]
    Backtick: "`" [ offsets: 22, position: ( line: 4, col: 0 ) ] ]
    Backtick: "`" [ offsets: 23, position: ( line: 4, col: 1 ) ] ]
    Backtick: "`" [ offsets: 24, position: ( line: 4, col: 2 ) ] ]
  Eof: "\0" [ offsets: 25, position: ( line: 4, col: 3 ) ] ]
