crates/gfm-syntax/tests/snapshots/fenced_code_blocks/example_103.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  WhiteSpace: "   " [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  FencedCodeBlock [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Backtick: "`" [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Backtick: "`" [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
    Backtick: "`" [ offsets: 5, position: ( line: 0, col: 5 ) ] ]
    LineEnding: "\n   " [ offsets: 6, position: ( line: 0, col: 6 ) ] ]
    Word: "aaa" [ offsets: 10, position: ( line: 1, col: 0 ) ] ]
    LineEnding: "\n    " [ offsets: 13, position: ( line: 1, col: 3 ) ] ]
    Word: "aaa" [ offsets: 18, position: ( line: 2, col: 0 ) ] ]
    LineEnding: "\n  " [ offsets: 21, position: ( line: 2, col: 3 ) ] ]
    Word: "aaa" [ offsets: 24, position: ( line: 3, col: 0 ) ] ]
    LineEnding: "\n   " [ offsets: 27, position: ( line: 3, col: 3 ) ] ]
    Backtick: "`" [ offsets: 31, position: ( line: 4, col: 0 ) ] ]
    Backtick: "`" [ offsets: 32, position: ( line: 4, col: 1 ) ] ]
    Backtick: "`" [ offsets: 33, position: ( line: 4, col: 2 ) ] ]
  Eof: "\0" [ offsets: 34, position: ( line: 4, col: 3 ) ] ]
