crates/gfm-syntax/tests/snapshots/fenced_code_blocks/example_105.snap
---
source: crates/gfm-syntax/src/grammer/leaf.rs
expression: output
---
Document [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  FencedCodeBlock [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Backtick: "`" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
    Backtick: "`" [ offsets: 1, position: ( line: 0, col: 1 ) ] ]
    Backtick: "`" [ offsets: 2, position: ( line: 0, col: 2 ) ] ]
    LineEnding: "\n" [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
    Word: "aaa" [ offsets: 4, position: ( line: 1, col: 0 ) ] ]
    LineEnding: "\n  " [ offsets: 7, position: ( line: 1, col: 3 ) ] ]
    Backtick: "`" [ offsets: 10, position: ( line: 2, col: 0 ) ] ]
    Backtick: "`" [ offsets: 11, position: ( line: 2, col: 1 ) ] ]
    Backtick: "`" [ offsets: 12, position: ( line: 2, col: 2 ) ] ]
  Eof: "\0" [ offsets: 13, position: ( line: 2, col: 3 ) ] ]
